--- a/style/main.css
+++ b/style/main.css
@@ -50,6 +50,7 @@ button:hover {
     position: fixed;
     z-index: 20;
     height: 70px;
+    width: 1400px;
     padding:20px 0 18px;
     text-align: left;  
     background-color:rgb(0,0,0); 
